make the files relative to current dir

later code requires that
don't assume nobody wrote or generated absolute paths into the file

BUG: 512981
(cherry picked from commit 0fc159c521d37e98fd463020aaf4c8affe1987f9)